# hotstuff2

./: .gitignore  BLS_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CODE_CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HOTSTUFF2_CHANGES.md  HOTSTUFF2_COMPLETE_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NETWORK_OPTIMIZATION_COMPLETE.md  PAPER_COMPLIANCE.md  README.md  README_COMPREHENSIVE.md  README_NEW.md  STRESS_TESTING_COMPLETE.md  STRESS_TESTING_FRAMEWORK.md  TWO_PHASE_CORRECTION.md  run_final_test.sh  run_network_tests.sh  run_test_with_analysis.sh  test_all_with_timeout.sh  test_with_timeout.sh
api/: README.md
benches/: README.md
benches/scalability/: README.md
client/: README.md
config/: README.md
consensus/: README.md
core/: README.md
crypto/: README.md
errors/: README.md
examples/: README.md  basic_node.rs  byzantine_demo.rs  demo.rs  demo_simple.rs  hotstuff2_demo.rs  stress_test_demo.rs
executor/: README.md
extensions/: README.md
fault-tolerance/: README.md
mempool/: README.md
metrics/: README.md
network/: README.md
node/: README.md
optimizations/: README.md
protocol-variants/: README.md
rpc/: README.md
safety/: README.md
src/: lib.rs  testing.rs
src/config/: mod.rs
src/consensus/: mod.rs  pacemaker.rs  safety.rs  state_machine.rs  synchrony.rs  transaction_pool.rs
src/crypto/: bls_integration_tests.rs  bls_threshold.rs  key_pair.rs  mod.rs  signature.rs  threshold.rs
src/error/: mod.rs
src/message/: consensus.rs  mod.rs  network.rs
src/metrics/: mod.rs
src/network/: client.rs  mod.rs  multinode_tests.rs  optimized_tests.rs  p2p.rs  production_manager.rs  production_tcp.rs  reliability.rs  server.rs  simple_tests.rs  tcp_network.rs  test_utils.rs  tests.rs  transport.rs
src/node/: mod.rs  node.rs  node_config.rs
src/protocol/: advanced_bft_tests.rs  basic_integration_test.rs  benchmarks.rs  byzantine_tests.rs  comprehensive_tests.rs  comprehensive_tests_simple.rs  enhanced_production_tests.rs  hotstuff2.rs  hotstuff2_backup.rs  hotstuff2_complete.rs  integration_tests.rs  integration_working.rs  minimal_byzantine_test.rs  mod.rs  optimistic_tests.rs  production_tests.rs  recovery.rs  simple_production_tests.rs  tests.rs
src/storage/: block_store.rs  mempool.rs  mod.rs  rocksdb_store.rs
src/testing/: stress_test.rs
src/timer/: mod.rs  (+1 more)
state/: README.md
storage/: README.md
sync/: README.md
tests/: README.md
types/: README.md
utils/: README.md
validator/: README.md
(+9 files in other folders)
