[package]
name = "hotstuff2"
version = "0.1.0"
edition = "2021"
description = "Implementation of HotStuff-2 consensus algorithm"
authors = ["sure2web3"]
repository = "https://github.com/sure2web3/hotstuff2"
license = "MIT"
readme = "README.md"

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.28"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.12"
parking_lot = "0.12.1"
prometheus = { version = "0.14.0", optional = true }
dashmap = "6.1.0"
log = "0.4.21"
rocksdb = "0.23.0"
rand = "0.9.1"
sha2 = "0.10.8"
async-trait = "0.1"
warp = "0.3"
hex = "0.4"
toml = "0.8"
env_logger = "0.11"
# Real BLS threshold cryptography
bls12_381 = "0.8"
group = "0.13"
ff = "0.13"
pairing = "0.23"
rand_core = { version = "0.6", features = ["getrandom"] }
rand_chacha = "0.3"
# Additional crypto dependencies for production
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
curve25519-dalek = "4.0"

[features]
default = []
metrics = ["prometheus"]  # Reference the crate name, not "dependency"   
byzantine = []  # Feature to enable Byzantine testing components   

[[bin]]
name = "hotstuff2"
path = "src/bin/node.rs"